--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,16 @@ android {
 
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     testImplementation 'junit:junit:4.12'
