--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+
+        <service android:name=".MediaService"/>
+
         <activity android:name=".HostActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
